# book

./: .env.example  .gitignore  AGENT化建议.md  README.md  dev.sh  docker-compose.yml  package-lock.json  package.json.bak  prompt-templates-2026-06-05.json  test_e2e.sh  代码检查报告说明.md  前后端联调说明.md  对标差距清单.md
.github/workflows/: ci.yml  ruff.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  cli.py  main.py
backend/app/api/routes/: admin.py  auth.py  compat.py  global_routes.py  mcp.py  project_init.py  prompt_templates.py  tasks.py  writing_styles.py  ws_tasks.py
backend/app/api/routes/projects_pkg/: __init__.py  ai_tools.py  base.py  batch_generation.py  chapter_rewrite.py  chapters.py  character_careers.py  characters.py  crud.py  foreshadows.py  inspiration.py  items.py  locations.py  memories.py  org_members.py  outlines.py  relations.py  screenplay.py  tts.py  worlds.py
backend/app/core/: ai_client.py  auth.py  config.py  database.py
backend/app/models/: __init__.py  ai_model.py  background_task.py  batch_generation_task.py  career.py  chapter.py  character.py  character_career.py  character_change_log.py  foreshadow.py  generation_history.py  imported_book.py  item.py  location.py  mcp_server.py  organization.py  organization_member.py  outline.py  plot_analysis.py  project.py  project_init_task.py  prompt_template.py  regeneration_task.py  relation_change_log.py  skill.py  story_memory.py  user.py  world.py  writing_style.py
backend/app/services/: async_ai_service.py  background_task_service.py  batch_generation_service.py  career_update_service.py  chapter_context_service.py  chapter_service.py  chapter_tools.py  character_state_update_service.py  diff_rewrite_service.py  foreshadow_service.py  json_helper.py  local_embedding.py  mcp_client_service.py  memory_vector_service.py  outline_validation_service.py  text_cleaner.py  text_splitter.py  txt_parser_service.py
backend/app/services/screenwriter/: __init__.py  models.py  screenwriter.py
backend/app/services/tts_pipeline/: __init__.py  builder.py  director.py  models.py
backend/app/skills/: __init__.py  builtin.py  engine.py  prompt_import.py
backend/app/skills/prompts/: VARIABLES.md  __init__.py  _shared_ai_trace_prevention.json  _shared_ai_trace_prevention.md  _shared_book_import_genre_lock.json  _shared_book_import_genre_lock.md  _shared_book_import_lock.md  _shared_book_import_naming.json  _shared_book_import_naming.md  _shared_book_import_outline_format.json  _shared_book_import_outline_format.md  _shared_chapter_context.json  _shared_chapter_context.md  _shared_character_format.json  _shared_character_format.md  _shared_characters_batch_format.json  _shared_characters_batch_format.md  _shared_chunqiu_brush.json  _shared_chunqiu_brush.md  _shared_commercial_core.json  _shared_commercial_core.md  _shared_common_rules.json  _shared_common_rules.md  _shared_constraints.json  _shared_constraints.md  _shared_first_chapter_rules.json  _shared_first_chapter_rules.md  _shared_narrative_techniques.json  _shared_narrative_techniques.md  _shared_one_to_many_narrative.json  _shared_one_to_many_narrative.md  _shared_one_to_one_body.json  _shared_one_to_one_body.md  _shared_outline_expand_format.json  _shared_outline_expand_format.md  _shared_outline_format.json  _shared_outline_format.md  _shared_platform_guidelines.json  _shared_platform_guidelines.md  _shared_quality_target.json  (+108 more)
backend/app/skills/prompts/rules/: _shared_ai_trace_prevention.md  _shared_density_control.md  _shared_dialogue.md  _shared_information_control.md  _shared_narrative_rhythm.md  _shared_prose_style.md
backend/app/tools/: api.py
backend/data/tts_config/: characters.yaml  scenes.yaml
frontend/: .dockerignore  Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
frontend/components/: AnnotatedText.vue  AppIcon.vue  AppSidebar.vue  BatchGeneratePanel.vue  ChapterAnalysisPanel.vue  ChapterReaderModal.vue  ChapterRewritePanel.vue  ContentComparisonModal.vue  ExpansionPlanEditor.vue  ExpansionPlanView.vue  InitTaskFloat.vue  OutlineCard.vue  PageHeader.vue  RelationNode.vue  RewriteSuggestionModal.vue  ScreenplayPanel.vue  SidebarNavItem.vue  SidebarUser  SidebarUser.vue  ThinkingModesCard.vue  TtsResultModal.vue
frontend/composables/: useAiConfigCheck.ts  useAnnotationTypes.ts  useApi.ts  useAuth.ts  useBackgroundTasks.ts  useBookApi.ts  useChapterStream.ts  useError.ts  useInitTask.ts  useMessage.ts  useNavigation.ts  useProject.ts  useProjectApi.ts
frontend/layouts/: default.vue  landing.vue
frontend/middleware/: auth.global.ts
frontend/pages/: about.vue  ai-settings.vue  analysis.vue  book-import.vue  books.vue  careers.vue  chapter-reader.vue  chapters.vue  characters.vue  dashboard.vue  foreshadows.vue  help.vue  index.vue  inspire.vue  items.vue  locations.vue  login.vue  mcp.vue  memories.vue  organizations.vue  outline.vue  prompts.vue  register.vue  relation-types.vue  relations.vue  skill-manage.vue  worldview.vue  writing-style.vue
frontend/plugins/: antd.ts  auth-fetch.client.ts  auth-fetch.server.ts  hydration-refresh.client.ts  project-sync.client.ts
frontend/types/: index.ts
tts-pipeline/: .env.example  .gitignore  README.md  api.py  cli.py  requirements.txt
(+36 files in other folders)
