[project]
name = "moyu-backend"
version = "0.1.0"
description = "墨语 - 网文创作后端"
requires-python = ">=3.12"

# ============================================================
# Ruff 配置
# 文档: https://docs.astral.sh/ruff/configuration/
# 本地使用: cd backend && ruff check . && ruff format --check .
# ============================================================
[tool.ruff]
# 目标 Python 版本（影响语法现代化建议，如 UP 规则）
target-version = "py312"
# 行宽（与 Black 默认一致）
line-length = 100
# 包根目录，ruff 会据此解析 first-party import
src = ["app"]
# 包含的文件（默认就是 *.py，这里显式声明更清晰）
include = ["app/**/*.py", "tests/**/*.py"]
# 排除的目录
extend-exclude = [
    "venv",
    ".venv",
    "data",
    "__pycache__",
    "build",
    "dist",
    "*.db",
]

# ------------------------------------------------------------
# Lint 规则集（check）
# 规则说明见: https://docs.astral.sh/ruff/rules/
# ------------------------------------------------------------
[tool.ruff.lint]
# 启用的规则前缀:
#   E   pycodestyle 错误（基础风格）
#   W   pycodestyle 警告
#   F   Pyflakes（未使用变量/导入、重复定义等逻辑错误）
#   I   isort（import 排序）
#   UP  pyupgrade（现代化 Python 语法）
#   B   flake8-bugbear（常见陷阱与坏味道）
#   C4  flake8-comprehensions（列表/字典推导优化）
#   SIM flake8-simplify（可简化的写法）
#   N   pep8-naming（命名规范）
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "N"]

# 全局忽略的规则（本项目技术栈相关，非代码质量问题）:
#   E501   行太长 —— format 会处理大部分，长字符串/URL 不强求
#   B008   函数默认参数中调用函数 —— FastAPI Depends() 的标准用法
#   E712   与 True/False 比较 —— SQLAlchemy 查询 .where(Col == True) 是必须写法
#   SIM114 多分支相同 —— 有时为了可读性刻意分开
ignore = [
    "E501",
    "B008",
    "E712",
    "SIM114",
]

# ------------------------------------------------------------
# 按文件的忽略规则
# ------------------------------------------------------------
[tool.ruff.lint.per-file-ignores]
# 测试文件放宽部分规则
"tests/**" = ["B011"]  # assert False 在测试中是合法的
# projects_pkg 子包：从 base.py `import *` 是刻意的代码复用模式
# （base.py 集中导出 Pydantic schema、模型、辅助函数），豁免 star-import 相关噪音
# 但保留其他规则（F401 真正未用的导入仍会报、B904 等仍会报）
"app/api/routes/projects_pkg/*.py" = ["F403", "F405"]
# base.py 是有意设计的共享导入枢纽，其导入用于供给子模块 `import *`，
# 因此 Ruff 眼中的「未使用导入」实际上是公共 re-export，需豁免 F401。
"app/api/routes/projects_pkg/base.py" = ["F401"]

# ------------------------------------------------------------
# 格式化配置（format，兼容 Black 风格）
# ------------------------------------------------------------
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false


# ============================================================
# Vulture 配置（死代码检测）
# 文档: https://github.com/jendrikseipp/vulture
# 本地使用: cd backend && vulture app/
# ============================================================
[tool.vulture]
# 最小置信度（0-100）。低于此值的报告会被过滤，减少误报。
# 默认 60。FastAPI/SQLAlchemy 项目误报较多，设 80 更实用。
min_confidence = 80
# 只分析 app 目录（排除 venv/data/migrations 等）
paths = ["app"]
# 排除的路径
exclude = ["venv", ".venv", "data", "__pycache__", "build", "dist"]
# 忽略被这些装饰器修饰的函数/方法（避免误判为未使用）
ignore_decorators = [
    # FastAPI 路由（单引号字面串，反斜杠无需转义）
    '@app.route',
    '@.*\.get',
    '@.*\.post',
    '@.*\.put',
    '@.*\.delete',
    '@.*\.patch',
    '@.*\.websocket',
    # 标准装饰器
    '@property',
    '@staticmethod',
    '@classmethod',
    '@abstractmethod',
    # Pytest
    '@pytest.fixture',
    '@.*\.mark\.',
]
# 忽略这些名称（避免误判）
ignore_names = [
    # SQLAlchemy / Pydantic 常用
    "__tablename__",
    "__table_args__",
    "__init_subclass__",
    # dunder 方法（通常被框架调用）
    "__*__",
]